# Rag-Architectures-

./: .gitignore  README.md  pyproject.toml
src/: agneticrag.ipynb  naive_rag.ipynb
src/evaluation/: chatbot-eval.ipynb
src/rags/: crag.ipynb  selfrag.ipynb
